--- a/templates/traefik_config.yml.j2
+++ b/templates/traefik_config.yml.j2
@@ -6,18 +6,25 @@ entryPoints:
 
 providers:
   docker:
-    endpoint: "unix:///var/run/docker.sock"
     exposedByDefault: false
+
+api:
+  dashboard: true
 
 certificatesResolvers:
   myresolver:
     acme:
-      email: "{{ email }}"
-      storage: acme.json
+      email: {{ cloudflare_email }}
+      storage: "acme.json"
       dnsChallenge:
         provider: cloudflare
-        delayBeforeCheck: 0
 
-api:
-  dashboard: true
-  insecure: false
+http:
+  routers:
+    traefik:
+      rule: "Host(`traefik.{{ domain }}`)"
+      service: api@internal
+      entryPoints:
+        - websecure
+      tls:
+        certResolver: myresolver
